--- a/package.json
+++ b/package.json
@@ -10,20 +10,41 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^4.27.1",
+    "@hookform/resolvers": "^3.3.2",
+    "@pinecone-database/pinecone": "^1.1.0",
     "@prisma/client": "^5.6.0",
+    "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@upstash/ratelimit": "^1.0.0",
+    "@upstash/redis": "^1.25.1",
+    "@vercel/postgres": "^0.5.1",
+    "ai": "^2.2.27",
+    "axios": "^1.6.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
+    "langchain": "^0.0.199",
     "lucide-react": "^0.292.0",
     "next": "14.0.2",
+    "next-cloudinary": "^5.7.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.20.1",
+    "openai-edge": "^1.2.2",
     "query-string": "^8.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.48.2",
+    "react-spinners": "^0.13.8",
+    "replicate": "^0.18.1",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20",
